DevTools: fix unjust assertion in AndroidDeviceManader::Device::~Device

If a class is RefCountedThreadSafe, we can't really make an assumption
as to on what thread it gets destroyed, so just remove the assertion
that it's destroyed on the impl thread.

Bug: 747848
Change-Id: Ib180acf588af949e65d786f5b5a7a2c4412486bb